<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GMLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/emblem_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_horizontal"
                    android:text="@string/title"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_horizontal"
                    android:text="@string/department"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center_horizontal"
                    android:text="@string/subtitle"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    />
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_horizontal"
                    android:text="@string/title_name"
                    android:textColor="#CDDC39"
                    android:textSize="30sp"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_background"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="UserName"
                    android:padding="2dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="2dp"
                    app:layout_constraintHorizontal_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/ic_person"
                        android:drawableRight="@drawable/ic_person"
                        android:fontFamily="@font/poppinsmedium"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="Password"
                    android:padding="2dp"
                    app:boxBackgroundColor="@color/white"

                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="2dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGreen">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppinsmedium"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_background"
                    android:text="Login"
                    app:layout_constraintHorizontal_bias="0.0" />
            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/footer"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>